test/integration/bad/bad_to_int2.stan
model {
  array[3] real X;
  array[3] int Y = to_int(X);
}
